--- a/4º Año/Bases de Datos/Unidad 10/2. Esquemas de Control de Concurrencia.md
+++ b/4º Año/Bases de Datos/Unidad 10/2. Esquemas de Control de Concurrencia.md
@@ -76,7 +76,7 @@ El esquema de validación evita automáticamente los retrocesos en cascada, ya q
 ## Esquemas Multiversión
 Los esquemas de control de concurrencia tratados hasta aquí, garantizan la serializabilidad retrasando la transacción o bien abortando la transacción que solicitó una operación. Este problema puede evitarse si se mantiene las copias antiguas de todos los datos en el sistema.
 En los sistemas multiversión cada operación de escritura sobre $Q$ crea una nueva versión del dato $Q$. Cuando se realiza una operación de lectura sobre este dato, el sistema selecciona una de las versiones de $Q$ para leerse.
-La técnica más utilizada para los esquemas multiversión es la de estampillas de tiempo, en donde a cada dato $Q$ se le asocia una secuencia de versiones $<Q_1, Q_2, \cdots, Q_N>$, donde cada versión $Q_k$ contiene tres campos de información:
+La técnica más utilizada para los esquemas multiversión es la de estampillas de tiempo, en donde a cada dato $Q$ se le asocia una secuencia de versiones $<Q_1, Q_2, \dots, Q_N>$, donde cada versión $Q_k$ contiene tres campos de información:
 - **Contenido**: Valor de la versión $Q_k$.
 - $w-ts(Qk)$: estampilla de tiempo de la transacción que creó la versión $Q_k$.
 - $r-ts(Qk)$: estampilla de tiempo de la transacción más joven que leyó con éxito la versión $Q_k$.
