--- a/4º Año/Bases de Datos/Unidad 7/2. Bases de Datos Objeto Relacional.md
+++ b/4º Año/Bases de Datos/Unidad 7/2. Bases de Datos Objeto Relacional.md
@@ -1,10 +1,10 @@
-Los sistemas de ***bases de datos relacionales basadas en objetos***, es decir, los sistemas de bases de datos basados en el modelo Objeto-Relación, ofrecen un medio de migración cómodo para los usuarios de las bases de datos relacionales que deseen usar características de la orientación a objetos.
-Los modelos de datos Objeto-Relacional, combinan rasgos de los modelos relacionales y de los modelos orientados a objetos. Cuyas principales características son las siguientes:
+El ***modelo de datos relacional orientado a objetos*** extiende el modelo de datos relacional ofreciendo un sistema de tipos más rico que incluye tipos de datos complejos y orientación a objetos. Teniendo a su vez que extender los lenguajes de consultas para permitir que estos trabajen con datos mucho más complejos.
+Los modelos de datos Objeto-Relacional, combinan rasgos de los modelos relacionales y de los modelos orientados a objetos más tradicionales. Cuyas principales características son las siguientes:
 - Poseen un sistema de tipos enriquecido al igual que las bases de datos orientadas a objetos, combinado con relaciones como las básicas para el almacenamiento de datos.
-- Implementa los rasgos de la orientación a objetos dentro del propio sistema de tipos de la base de datos, ya que utiliza el modelos relacionales como modelo subyacente.
+- Implementa los rasgos de la orientación a objetos dentro del propio sistema de tipos de la base de datos, ya que utiliza el modelo relacional como modelo subyacente.
 
 >[!tldr] Objetos Largo (LOBs)
->Son tipos de datos especiales brindados por las bases de datos que se utilizan para almacenar gran cantidad de datos binarios o de texto. Existen dos tipos de objetos largos:
+>Los LOBs son tipos de datos especiales brindados por las bases de datos que se utilizan para almacenar gran cantidad de datos binarios o de texto. Existen dos tipos de objetos largos:
 >- **BLOB (Binary Large Object)**: Almacena datos binarios como imágenes, videos, o archivos multimedia.
 >- **CLOB (Character Large Object)**: Almacena grandes cantidades de texto, como documentos o artículos largos. Este tipo de objetos permiten la aplicación de métodos como `TRIM`, `SUBSTRING`, entre otros.
 >
@@ -15,17 +15,17 @@ Los modelos de datos Objeto-Relacional, combinan rasgos de los modelos relaciona
 >4. No permiten realizar la operación `DISTINCT`.
 >5. No pueden ser declarados como clave primaria o clave foránea.
 >
->Existen bases de datos en donde los objetos LOBs son almacenados directamente en el sistema de archivos y no sean gestionados directamente por la base de datos, en ese caso solo se poseerá una referencia a la ubicación de dicho archivo, esto puede generar enlaces corruptos en caso de que dicho archivo sea movido a otro directorio.
+>Existen bases de datos en donde los LOBs son almacenados directamente en el sistema de archivos y no son gestionados directamente por la base de datos, en ese caso solo se poseerá una referencia a la ubicación de dicho archivo, esto puede generar enlaces corruptos en caso de que dicho archivo sea movido a otro directorio.
 ## Tipos Definidos por el Usuario
-Las bases de datos relacionales permiten a los usuarios crear nuevos tipos compuestos, especificando tanto sus propiedades como métodos. Los tipo objeto definidos por los usuarios son tipos de dato que puede ser manejado de la misma manera que los tipos nativos como `VARCHAR` o `NUMBER`. Pudiendo especificar una columna de una tabla relacional con un tipo objeto, además de poder declarar variables del tipo objeto. Las diferencias con un tipo básico son:
+Las bases de datos relacionales permiten a los usuarios crear nuevos tipos compuestos, especificando tanto sus propiedades como métodos. Los tipos de datos definidos por los usuarios son tipos de dato que puede ser utilizados de la misma manera que los tipos nativos como `VARCHAR` o `NUMBER`. Pudiendo especificar una columna de una tabla relacional con un tipo objeto, además de poder declarar variables del tipo objeto. Las diferencias con un tipo básico son:
 - No son unitarios, están compuestos por atributos y métodos.
-- Son menos genéricos que los tipos básicos ya que modelan una entidad del mundo real específica.
+- Son menos genéricos que los tipos básicos, ya que modelan una entidad del mundo real específica.
 - Se pueden especializar a través de la Herencia, creando tipos y subtipos.
 
 Los tipos definidos por los usuarios pueden ser clasificados de la siguiente manera:
-1. **Tipo Distinto**: Son tipos de datos basados en tipos básicos, como `INTEGER` o `FLOAT` heredando tanto su dominio como sus operaciones, con la particularidad de que solo permiten realizar operaciones con objetos de su mismo tipo, aunque pueden castearse a sus tipos bases y realizar operaciones sin problema alguno.
-2. **Tipo Estructurado como Valor**: Son tipos de datos compuestos que son utilizados como propiedad por otros tipos estructurados. Estos tipos de datos permiten la definición de funciones y procedimientos que pueden ser utilizados para realizar comparaciones entre instancias de este tipo.
-3. **Tipo Estructurado como Objeto**: Son tipos de datos estructurados que se utilizan para representar entidades del mundo real y por lo general se emplean para generar una tabla a partir de ellos, donde cada objeto se representa como una fila de la tabla, asignando un identificador único a cada objeto.
+1. **Tipo distinto**: Son tipos de datos basados en tipos básicos, como `INTEGER` o `FLOAT` heredando tanto su dominio como sus operaciones, con la particularidad de que solo permiten realizar operaciones con objetos de su mismo tipo, aunque pueden castearse a sus tipos bases y realizar operaciones sin problema alguno.
+2. **Tipo estructurado como valor**: Son tipos de datos compuestos que son utilizados como propiedad por otros tipos estructurados. Estos tipos de datos permiten la definición de funciones y procedimientos que pueden ser utilizados para realizar comparaciones entre instancias de este tipo.
+3. **Tipo estructurado como objeto**: Son tipos de datos estructurados que se utilizan para representar entidades del mundo real y por lo general se emplean para generar una tabla a partir de ellos, donde cada objeto se representa como una fila de la tabla, asignando un identificador único a cada objeto.
 ### Definición de Métodos
 Cuando se está especificando un nuevo tipo de dato, también es posible declarar funciones que implemeten comportamientos propios para los objetos de ese tipo. Estas funciones pueden ser sobrecargadas la cantidad de veces que se necesite, con la particularidad de que el primer parámetro de estas funciones va a ser el ***self***, que hará referencia al propio objeto.
 Al igual que en los lenguajes orientados a objetos convencionales, las funciones pueden ser ***constructores***, utilizados para instanciar nuevos objetos. ***Estáticas***, es decir, forman parte de la definición del tipo de dato y no de sus instancias. Y las funciones ***Miembro*** que pueden ser llamadas por todas las instancias de ese tipo.
