--- a/4º Año/Bases de Datos/Unidad 8/4. Acceso Multiclave.md
+++ b/4º Año/Bases de Datos/Unidad 8/4. Acceso Multiclave.md
@@ -17,7 +17,7 @@ La tercera estrategia es la única de las tres que aprovecha la ventaja de tener
 - Hay muchos registros pertenecientes a cuentas con un saldo de 1.000
 - Hay pocos registros pertenecientes a la sucursal Pamplona cuyo saldo de cuenta sea 1.000.
 
-Si estas condiciones ocurrieran, se tendrían que examinar un gran número de punteros para producir un resultado pequeño. Una estrategia más eficiente para este caso es crear y utilizar un índice con una clave de búsqueda compuesta por *nombre_sucursal* y *saldo*. La estructura del índice es la misma que para cualquier otro índice, con la única diferencia de que la clave de búsqueda no es un simple atributo, sino una lista de atributos, esta clave se puede representar como una tupla de valores, de la forma $(a_1, \cdots, a_n)$, donde los atributos indexados son $A_1, \cdots, A_n$. 
+Si estas condiciones ocurrieran, se tendrían que examinar un gran número de punteros para producir un resultado pequeño. Una estrategia más eficiente para este caso es crear y utilizar un índice con una clave de búsqueda compuesta por *nombre_sucursal* y *saldo*. La estructura del índice es la misma que para cualquier otro índice, con la única diferencia de que la clave de búsqueda no es un simple atributo, sino una lista de atributos, esta clave se puede representar como una tupla de valores, de la forma $(a_1, \dots, a_n)$, donde los atributos indexados son $A_1, \dots, A_n$.
 >[!tldr] Orden de las Claves Múltiples
 >El orden de los valores de este tipo de claves de búsqueda es el orden lexicográfico. Es decir, para el caso de dos atributos en la clave de búsqueda, $(a^1_1, a^2_1) < (a^1_2, a^2_2)$ si $a^1_1 < a^1_2$, o bien $a^1_1 = a^1_2$ y $a^2_1 < a^2_2$. El orden lexicográfico es básicamente el mismo orden alfabético de las palabras.
 
@@ -42,5 +42,5 @@ Los mapas de bits también pueden utilizarse para contar el número de tuplas qu
 Adicionalmente, los índices de mapas de bits son generalmente muy pequeños comparados con el tamaño real de la relación. Los registros tienen generalmente de decenas a centenas de bytes, mientras que un único bit representa a un registro en el mapa de bits.
 Si bien los mapas de bits pueden ser implementados sobre cualquier campo, estos resultan extremadamente útiles y eficientes para aquellos campos cuyos dominio de valores sea relativamente pequeño, como es el caso del sexo.
 >[!tldr] Actualización de los Índices de Mapas de Bits.
->El borrado de registros crea huecos en la secuencia de registros, como el desplazamiento de los registros o de los números de registro para rellenar los huecos sería excesivamente costoso. Para reconocer los registros borrados se puede almacenar un mapa de bits de existencia en el que el bit $i$ es 0 si el registro $i$ no existe, y 1 en caso contrario.
+>El borrado de registros crea huecos en la secuencia de registros, como el desplazamiento de los registros o de los números de registro para rellenar los huecos sería excesivamente costoso, para reconocer los registros borrados se puede almacenar un mapa de bits de existencia en el que el bit $i$ es 0 si el registro $i$ no existe, y 1 en caso contrario.
 >La inserción de registros, por su parte, no afecta a la secuencia de numeración de otros registros. Por tanto, se puede insertar tanto añadiendo registros al final del archivo como reemplazando los registros borrados.
