--- a/4º Año/Bases de Datos/Unidad 8/5. Procesamiento de Consultas SQL.md
+++ b/4º Año/Bases de Datos/Unidad 8/5. Procesamiento de Consultas SQL.md
@@ -23,7 +23,7 @@ Para hallar el plan de evaluación de consultas menos costoso el optimizador nec
 
 La primera y tercera etapa se entrelazan al momento de la optimización de las consultas, ya que algunas expresiones se generan e inmediatamente son anotadas, por otro lado, la segunda etapa se realiza más en segundo plano recopilando información estadística sobre las relaciones involucradas en la consulta.
 Para implementar la primera etapa el optimizador de consultas debe generar expresiones equivalentes a la expresión dada. Se dice que dos expresiones del álgebra relacional son equivalentes si, en cada ejemplar legal de la base de datos, las dos expresiones generan el mismo conjunto de tuplas, la manera de obtener expresiones equivalentes es mediante las ***reglas de equivalencia***, que especifican el modo de transformar una expresión en otra lógicamente equivalente[^1].
-Para optimizar una consulta apropiadamente, el optimizador debe conocer el coste de cada operación. Aunque el coste exacto es difícil de calcular, dado que depende de los siguientes parámetros:
+Para optimizar una consulta apropiadamente, el optimizador debe conocer el coste de cada operación. Aunque el coste exacto son difíciles de calcular, dado que depende de los siguientes parámetros:
 - **Costo de acceso al almacenamiento secundario**: Tiempo de acceso a los registros de un archivo, este tiempo va a depender en parte del tipo de estructuras de acceso a dicho fichero.
 - **Costo de almacenamiento**: Cantidad ficheros intermedios generados por la estrategia de ejecución de la consulta.
 - **Costo computacional**: Tiempo de ejecución de operaciones sobre los buffers de datos durante la ejecución de la consulta.
@@ -52,7 +52,7 @@ Además de estos datos, la mayoría de las bases de datos almacenan la distribuc
 >- Si el atributo es una clave, es decir, cada valor es único, entonces $d = r$ y $sl = 1/r$, por lo tanto, $s = 1$.
 >- Si el atributo no es clave y los $d$ valores están distribuidos uniformemente $sl = 1 / d$ y, por lo tanto, $s = r/d$.
 
-## lección de los Planes de Evaluación
+## Elección de los Planes de Evaluación
 La generación de expresiones solamente es una parte del proceso de optimización de consultas, ya que cada operación de una expresión puede implementarse con algoritmos diferentes. Por esta razón se necesita un plan de evaluación para definir exactamente el algoritmo que se usará para cada operación y el modo en que se coordinará la ejecución de las operaciones.
 Cada una de las operaciones relacionales se pueden implementar en varios algoritmos diferentes e incluso utilizar diferentes estructuras de índices, lo que da lugar a planes de evaluación alternativos. Además, hay que tomar decisiones sobre el ***encauzamiento*** de las operaciones, es decir, el orden en el que estas operaciones relacionales deben ser realizadas.
 Una manera de escoger un plan de evaluación para una expresión de consulta es sencillamente escoger el algoritmo más económico para evaluar cada operación. Sin embargo, puede que el algoritmo más económico no siempre sea la forma más óptima de resolver una expresión, debido a que otros algoritmos pueden proporcionarnos ciertas ventajas en ciertas ocasiones, por lo que al momento de seleccionar un plan de evaluación no solo se debe considerar la expresión de menor costo sino también los algoritmos de resolución de cada operación relacional.
@@ -65,7 +65,7 @@ Hay dos enfoques generales a la hora de seleccionar el algoritmo de evaluación 
 - **Heurística de optimización**. Un inconveniente de la optimización basada en costes es el coste de la propia optimización, dicho coste puede reducirse mediante algoritmos inteligentes, pero aun así el número de planes de evaluación distintos para una consulta puede ser muy grande y buscar el plan óptimo sigue siendo costoso. Por ello, muchos sistemas usan reglas heurísticas para reducir el coste de la optimización. Un ejemplo de regla heurística puede ser resolver las operaciones de selección tan pronto como sea posible. Los optimizadores heurísticos usan esta regla sin averiguar si se reduce el coste mediante esta transformación, por lo general la aplicación de estas reglas suele aportar una reducción al coste, aunque no siempre.
 
 >[!info] Heurística para la Proyección
->Las operaciones de proyección y selección, reduce el tamaño de las relaciones, Por lo tanto, siempre que haya que generar una relación temporal, resulta ventajoso aplicar inmediatamente cuantas proyecciones sea posible. Aunque suele resultar mejor llevar a cabo las selecciones antes que las proyecciones, ya que las selecciones tienen la posibilidad de reducir mucho el tamaño de las relaciones y permiten el empleo de índices para tener acceso a las tuplas.
+>Las operaciones de proyección y selección, reduce el tamaño de las relaciones, por lo tanto, siempre que haya que generar una relación temporal, resulta ventajoso aplicar inmediatamente cuantas proyecciones sea posible. Aunque suele resultar mejor llevar a cabo las selecciones antes que las proyecciones, ya que las selecciones tienen la posibilidad de reducir mucho el tamaño de las relaciones y permiten el empleo de índices para tener acceso a las tuplas.
 ## Evaluación de Expresiones y Encauzamiento
 La manera más simple de evaluar una expresión es realizar las distintas operaciones de consulta una tras otro en el orden establecido por el plan de evaluación. El resultado de cada evaluación se materializa en una relación temporal que será utilizada posteriormente, este proceso recibe el nombre de ***evaluación materializada***. Este método requiere la construcción de relaciones temporales, y por ende la escritura de estas mismas en disco, lo que no es muy eficiente.
 Puede mejorarse este método utilizando ***memoria intermedia doble***, de este modo una de las memorias es utilizada para realizar la ejecución de programa y en la otra se irán copiando todos los resultados de las consultas. Esta alternativa no es muy deseable debido a la sobrecarga adicional que recibiría el gestor de memoria intermedia.
