--- a/4º Año/Bases de Datos/Unidad 9/1. Transacciones.md
+++ b/4º Año/Bases de Datos/Unidad 9/1. Transacciones.md
@@ -17,7 +17,7 @@ Con el fin de gestionar de mejor manera la concurrencia de las transacciones, un
 ![[estado-transaciones.png]]
 
 >[!tldr] Transacciones Compensadores
->En el caso de que una transacción se comprometa y los cambios de esta transacción se reflejan en la base de datos, en tal caso no se puede abortar esa transacción. En caso de querer revertir los cambios se deberá ejecutar una ***transacción compensadora*** que revierta los cambios. Aunque las bases de datos emplean otros métodos para evitar que este tipo de transacciones se comprometan indebidamente.
+>Cuando una transacción se comprometa y los cambios se reflejaron en la base de datos, resulta imposible abortar dicha transacción. En caso de querer revertir los cambios, se deberá ejecutar una ***transacción compensadora*** que revierta los cambios. Aunque las bases de datos emplean otros métodos para evitar que este tipo de transacciones se comprometan indebidamente.
 
 En el contexto de las transacciones en bases de datos, existen dos tipos principales de fallos cuando se están ejecutando las transacciones:
 1. **Con pérdida de información**: Se refiere a situaciones en las que, debido a alguna circunstancia, se pierde información que no puede ser recuperada.
@@ -40,9 +40,9 @@ Los fallos producidos al momento de realizar transacciones pueden ser recuperado
 - **Valor nuevo**: Valor del dato después de la escritura.
 - **Otros registros**: Graban procesos especiales durante la transacción: $<T_i \ Starts>$ comienzo de una transacción, $<T_i \ Commits>$ el cometido y $<T_i \ Abort>$ el aborto de una transacción.
 
-En las bitácoras cada vez que una transacción $T_i$ inicia se registra esta misma mediante un registro $<T_i \ Starts>$, posteriormente asientan en el archivo los registros modificados por esta transacción, como ya hemos mencionado anteriormente los registros en los logs files poseen la siguiente estructura $<T_i, X_j, V_1, V_2>$, donde $T_i$ es la transacción que realiza la operación de escritura, $X_j$ es el registro que se actualizó, $V_1$ es el valor antiguo de dicho registro y $V_2$ es el nuevo valor que este poseerá luego de la escritura. Una vez asentados todos los registros que fueron actualizados se indica en el archivo la finalización de la transacción con el siguiente registro $< T_i \ Commits>$.
-Las modificaciones que se realizan dentro de las transacciones pueden realizarse de dos maneras:
-1. **Modificación Inmediata**: Permite las modificaciones no comprometidas, grabando las modificaciones en las bases de datos, mientras la transacción está todavía en estado activo. Antes que $T_i$ comience su ejecución el registro $<T_i \ Starts>$ se escribe en la bitácora. Durante su ejecución cualquier operación de escritura que haga $T_i$, se escribe primero en la bitácora y luego en las bases de datos. Cuando $T_i$ esté parcialmente comprometida se grabará el registro $<T_i \ Commits>$ en la bitácora.
+En las bitácoras cada vez que una transacción $T_i$ inicia se registra esta misma mediante un registro $<T_i \ Starts>$, posteriormente asientan en el archivo los registros modificados por esta transacción, como ya hemos mencionado anteriormente los registros en los logs files poseen la siguiente estructura $<T_i, X_j, V_1, V_2>$, donde $T_i$ es la transacción que realiza la operación de escritura, $X_j$ es el registro que se actualizó, $V_1$ es el valor antiguo de dicho registro y $V_2$ es el nuevo valor que este poseerá luego de la escritura. Una vez asentados todos los registros que fueron actualizados, se indica en el archivo la finalización de la transacción con el siguiente registro $< T_i \ Commits>$.
+Las modificaciones realizadas por las transacciones pueden llevarse adelante de dos maneras:
+1. **Modificación Inmediata**: Permite las modificaciones no comprometidas, grabando las modificaciones en las bases de datos, mientras la transacción está todavía en estado activo. Antes que $T_i$ comience su ejecución, el registro $<T_i \ Starts>$ se escribe en la bitácora. Durante su ejecución, cualquier operación de escritura que haga $T_i$, se escribe primero en la bitácora y luego en las bases de datos. Cuando $T_i$ esté parcialmente comprometida, se grabará el registro $<T_i \ Commits>$ en la bitácora.
 
 >[!tldr] Recuperación de Datos - Modificación Inmediata
 >Cuando una transacción falla en un sistema que utiliza modificación inmediata, el esquema de recuperación utiliza dos procedimientos:
@@ -62,8 +62,8 @@ Para garantizar la atomicidad en las transacciones, es necesario seguir un orden
 3. Antes de grabar en la base de datos un bloque que está en memoria principal, deben haberse grabado en disco todos los registros de bitácora que contienen los cambios de los datos de ese bloque.
 
 Este proceso asegura que todos los cambios realizados por una transacción se registran de manera segura y ordenada, manteniendo así la atomicidad de las transacciones.
-Por otro lado, para garantizar la durabilidad de las transacciones, es fundamental tener en cuenta que la memoria principal es mucho más pequeña que la memoria secundaria. Además, el intercambio de datos entre estas dos memorias puede ser costoso en términos de tiempo. Adicionalmente, si no hay espacio disponible en los buffers intermedios para cargar un bloque, será necesario eliminar alguno de los bloques que se encuentran en la memoria principal.
-Es por esta razón que algunos sistemas de gestión de bases de datos implementan su buffer dentro de la memoria virtual del sistema operativo. La base de datos en sí se almacena en un sistema de archivos del sistema operativo, mientras que este último gestiona las transferencias entre los archivos, la base de datos y el registro intermedio en memoria virtual. Esto asegura que se cumplan los requisitos de durabilidad mencionados anteriormente.
+Por otro lado, para garantizar la durabilidad de las transacciones, es fundamental tener en cuenta que la memoria principal es mucho más pequeña que la memoria secundaria. Además, el intercambio de datos entre estas dos memorias puede ser costoso en términos de tiempo.
+Algunos sistemas de gestión de bases de datos implementan su buffer dentro de la memoria virtual del sistema operativo. La base de datos en sí se almacena en un sistema de archivos del sistema operativo, mientras que este último gestiona las transferencias entre los archivos, la base de datos y el registro intermedio en memoria virtual. Esto asegura que se cumplan los requisitos de durabilidad mencionados anteriormente.
 Generalmente, los gestores de bases de datos reservan parte de la memoria principal para utilizarla como buffers que ellos mismos gestionan, en lugar del sistema operativo. Esto es así, ya que las bases de datos manejan conceptos tales como bloques clavados y salidas forzadas, conceptos los cuales no son entendidos por los sistemas operativos, en parte porque no fueron diseñados para llevar a cabo este tipo de tareas.
 #### Puntos de Verificación
 Ante un fallo en el sistema es necesario consultar la bitácora para determinar que transacciones deben rehacerse y cuáles necesitan deshacerse. El proceso de búsqueda consume tiempo y la mayor parte de las transacciones que, según el algoritmo, necesitan volver a hacerse ya escribieron sus actualizaciones en la base de datos, si bien volver a hacerlas no cause daño, prolonga el proceso de recuperación. Es por eso que periódicamente o cuando ocurre un fallo, el sistema lleva a cabo el siguiente conjunto de acciones:
