--- a/4º Año/Bases de Datos/Unidad 8/1. Organizacion Fisica.md
+++ b/4º Año/Bases de Datos/Unidad 8/1. Organizacion Fisica.md
@@ -1,18 +1,18 @@
 Cuando se realiza una consulta a una base de datos, cada solicitud especifica la dirección en disco donde se encuentran los registros, generalmente identificada por el número de bloque del disco. Estos bloques luego se transfieren del disco a la memoria principal.
-Las bases de datos se almacenan en archivos en disco, y estos archivos se dividen en ***bloques***, cada uno de los cuales puede contener varios elementos de datos y viceversa. Dado que los datos están en la memoria secundaria, el acceso es mucho más lento que si estuvieran en la memoria principal, por esta razon, uno de los objetivos de un sistema de gestión de bases de datos es minimizar las transferencias de bloques entre el disco y la memoria, manteniendo en esta última la mayor cantidad posible de bloques. Esto aumenta la probabilidad de que, al necesitar acceder a un bloque, ya se encuentre en la memoria principal, evitando así el costoso acceso al disco. Sin embargo, como no es posible mantener todos los bloques en la memoria principal, es necesario gestionar eficazmente la asignación del espacio disponible.
+Las bases de datos se almacenan en archivos en disco, estos archivos se dividen en ***bloques***, los cuales puede contener varios elementos de datos y viceversa. Dado que los datos están en la memoria secundaria, el acceso es mucho más lento que si estuvieran en la memoria principal, por esta razon, uno de los objetivos de un sistema de gestión de bases de datos es minimizar las transferencias de bloques entre el disco y la memoria, manteniendo en esta última la mayor cantidad posible de bloques. Esto aumenta la probabilidad de que, al necesitar acceder a un bloque, ya se encuentre en la memoria principal, evitando así el costoso acceso al disco. Sin embargo, como no es posible mantener todos los bloques en la memoria principal, es necesario gestionar eficazmente la asignación del espacio disponible.
 ## Memoria Intermedia
 La memoria intermedia es un gran _buffer_ ubicado en la memoria principal que almacena copias de los bloques del disco. Aunque siempre se guarda una copia en el disco, puede que esa copia sea una versión más antigua que la que encuentra en memoria principal.
 Los sistemas de gestión de bases de datos cuentan con un subsistema dedicado a la administración de esta memoria intermedia, conocido como _**gestor de memoria intermedia (GMI)**_. Cuando los gestores de bases de datos necesitan un bloque del disco, realizan una solicitud al GMI. Este verifica si el bloque solicitado ya está en el buffer, de ser así, proporciona la dirección del bloque en la memoria principal. Si el bloque no está en el buffer, el GMI asigna espacio en la memoria intermedia, para cargarlo posteriormente.
 Puede ocurrir que el buffer esté lleno, en ese caso el GMI debe liberar espacio descartando algunos bloques. Si los bloques descartados han sido modificados, sus cambios deben guardarse en el disco antes de ser eliminados. Las ***políticas de sustitución de bloques*** son estrategias para decidir qué bloques se baja de la memoria intermedia cuando no hay espacio suficiente. Existen varios métodos, pero una de las más comunes utilizados por los sistemas operativos es _**Least Recently Used (LRU)**_, que elimina del buffer el bloque al que se ha hecho menos referencia recientemente.
 Los sistemas de gestión de bases de datos suelen emplear el esquema ***Most Recently Used (MRU)*** para el reemplazo de bloques, ya que las bases de datos manejan los datos de manera diferente a los sistemas operativos. Esta técnica permite predecir con mayor precisión las futuras referencias, anticipando qué bloques serán necesarios al analizar las etapas involucradas en la operación solicitada por el usuario.
-Esta política de sustitución se justifica en las bases de datos debido a que estas mismas manejan conceptos como el de ***bloques clavados*** o ***salidas forzadas***. Los bloques clavados son bloques que no puede ser eliminado de la memoria intermedia, por lo general entran en esta categoría los bloques que son accedidos más frecuentemente o de forma concurrente, mejorando así los tiempos de respuesta y evitando posibles errores.
+Esta política de sustitución empleada por las bases de datos las fuerza a utilizar métodos adicionales como el de ***bloques clavados*** o ***salidas forzadas***. Los bloques clavados son bloques que no puede ser eliminado de la memoria intermedia, por lo general entran en esta categoría los bloques que son accedidos más frecuentemente o de forma concurrente, mejorando así los tiempos de respuesta y evitando posibles errores.
 Por otro lado, hay situaciones en la que resulta necesario volver a escribir el bloque en el disco, por más que el buffer tenga espacio suficiente para alojar nuevos bloques. A este proceso se lo conoce como ***salida forzosa*** y se lleva a cabo para asegurar la persistencia de los datos y proteger al sistema de posibles caídas.
 Los sistemas operativos no están pensados para trabajar con bloques clavados ni salidas forzosas por lo que estas prestaciones resultan esenciales a la hora de implementar un sistema de gestión de bases de datos.
 ## Organización de los Archivos
 Las bases de datos se componen de distintos archivos, a su vez los archivos se organizan lógicamente como secuencias de registros. Estos registros se corresponden con los bloques del disco, los cuales son de un tamaño fijo y generalmente preestablecidos por el sistema operativo, en cambio, los tamaños de los registros pueden ser fijos o variables.
 En caso de que los registros sean fijos surgen una serie de problemas, supongamos que el tamaño de nuestros registros es de 40 bytes y tenemos un archivo compuesto por una gran cantidad de estos registros, en este caso surgen dos problemas:
 1. Resulta difícil borrar registros de esta estructura, ya que hay que rellenar el espacio ocupado por el registro borrado, esto implica un desplazamiento físico del archivo lo que sería muy costoso o mover el último registro del archivo al sitio donde se borró el archivo, aun así no es tan conveniente debido a que requiere más acceso a disco
-2. Puede que algunos registros se saltarán los límites de los bloques y, por tanto, sean almacenados en dos bloques distintos requiriendo un acceso adicional a disco.
+2. Puede que algunos registros sobrepasen el tamaño de los bloques y, por tanto, sean almacenados en dos bloques distintos requiriendo un acceso adicional a disco.
 
 Una opción más eficiente, al primer problema es dejar el espacio del registro eliminado vacío y reutilizar esos espacios para futuras inserciones. En este caso, el archivo tendría una cabecera con un puntero al primer registro vacío, que a su vez apuntaría al siguiente espacio libre, y así sucesivamente.
 ![[registros-fijos.png]]
@@ -45,10 +45,10 @@ Los archivos manejados por una base de datos puede categorizarse de acuerdo a la
 - **Agrupaciones**: Se guardan en el mismo archivo registros pertenecientes a relaciones diferentes.
 - **Asociativa**: Calcula una función de asociación (hash) sobre algún atributo de cada registro. El resultado de la función de asociación especifica el bloque del archivo en que se deberá colocar el registro.
 #### Organización Secuencial
-Los archivos secuenciales están diseñados para procesar registros de manera eficiente según un orden definido por una ***clave de búsqueda***. Para recuperar registros rápidamente, cada uno incluye un puntero que señala al siguiente en el orden establecido por dicha clave. Para reducir el número de accesos a los bloques durante el procesamiento, los registros se almacenan físicamente siguiendo el orden de la clave de búsqueda.
+Los archivos secuenciales están diseñados para procesar registros de manera eficiente según un orden definido por una ***clave de búsqueda***. Para recuperar registros rápidamente, cada registro incluye un puntero que señala al siguiente en el orden establecido por dicha clave. Para reducir el número de accesos a los bloques durante el procesamiento, los registros se almacenan físicamente siguiendo el orden de la clave de búsqueda.
 Sin embargo, resulta difícil mantener el orden físico secuencial a medida que se insertan y se borran registros, puesto que resulta costoso desplazar muchos registros como consecuencia de una única operación de inserción o de borrado. El borrado se puede gestionar mediante cadenas de punteros, conocidas como ***lista de libres***, y para las inserciones se siguen estas reglas:
 1. Localizar el registro que precede al que se va a insertar según el orden de la clave de búsqueda.
-2. Si hay un espacio vacío en la lista de libres dentro del mismo bloque que dicho registro, el nuevo registro se insertará ahí. De lo contrario, se almacenará en un bloque de desbordamiento. En cualquier caso, los punteros deben ajustarse para mantener el orden según la clave de búsqueda.
+2. Si hay un espacio vacío en la lista de libres dentro del mismo bloque que dicho registro, el nuevo registro se insertará ahí. De lo contrario, se almacenará dicho registro en un bloque de desbordamiento. En cualquier caso, los punteros deben ajustarse para mantener el orden según la clave de búsqueda.
 
 >[!important] Características de los Archivos Secuenciales
 >- Permite la inserción rápida de nuevos registros.
